--- a/chroma/src/main/res/layout/channel_row.xml
+++ b/chroma/src/main/res/layout/channel_row.xml
@@ -15,12 +15,10 @@
   ~ limitations under the License.
   -->
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/label"
@@ -61,4 +59,4 @@
         android:layout_toRightOf="@id/label"
         android:layout_toStartOf="@id/progress_text"
         android:max="255"/>
-</RelativeLayout>
+</merge>
