--- a/chroma/src/main/res/values/dimens.xml
+++ b/chroma/src/main/res/values/dimens.xml
@@ -17,6 +17,8 @@
 
 <resources>
     <dimen name="color_view_height">250dp</dimen>
+    <dimen name="chroma_dialog_width">310dp</dimen>
+
     <dimen name="channel_view_margin_top">16dp</dimen>
     <dimen name="channel_view_margin_bottom">4dp</dimen>
 </resources>
