Cleanup layout margins and progress gravity

--- a/chroma/src/main/res/layout/channel_row.xml
+++ b/chroma/src/main/res/layout/channel_row.xml
@@ -27,8 +27,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:fontFamily="sans-serif-medium"
         tools:text="R"/>
 
@@ -39,10 +39,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:fontFamily="sans-serif-light"
-        android:gravity="end"
+        android:gravity="center"
         tools:text="255"/>
 
     <SeekBar
