--- a/chroma/src/main/res/values/dimens.xml
+++ b/chroma/src/main/res/values/dimens.xml
@@ -17,7 +17,10 @@
 
 <resources>
     <dimen name="color_view_height">250dp</dimen>
+    <dimen name="color_view_width">180dp</dimen>
+
     <dimen name="chroma_dialog_width">310dp</dimen>
+    <dimen name="chroma_dialog_height">210dp</dimen>
 
     <dimen name="channel_view_margin_top">16dp</dimen>
     <dimen name="channel_view_margin_bottom">4dp</dimen>
