--- a/chroma/src/main/res/layout/channel_row.xml
+++ b/chroma/src/main/res/layout/channel_row.xml
@@ -47,6 +47,7 @@
 
     <SeekBar
         android:id="@+id/seekbar"
+        android:saveEnabled="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
