--- a/chroma-sample/src/main/res/layout/activity_main.xml
+++ b/chroma-sample/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/textView"
         android:textColor="@android:color/black"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
