--- a/chroma/src/main/res/layout/chroma_view.xml
+++ b/chroma/src/main/res/layout/chroma_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,4 +29,4 @@
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         android:visibility="gone"/>
-</RelativeLayout>
+</merge>
