--- a/chroma-sample/src/main/res/layout/activity_main.xml
+++ b/chroma-sample/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:context="me.priyesh.chromasample.MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -22,15 +22,29 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/text_view"
-        android:textColor="@android:color/black"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:textSize="32sp"
-        android:textAllCaps="true"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-medium"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="32sp"
+            tools:text="#123456"/>
+
+        <Spinner
+            android:id="@+id/color_mode_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -40,7 +54,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginRight="24dp"
         android:src="@drawable/ic_color"
-        app:elevation="6dp"
-        app:backgroundTint="@android:color/white"/>
+        app:backgroundTint="@android:color/white"
+        app:elevation="6dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
